--- a/Level2_task2_tribute/index.html
+++ b/Level2_task2_tribute/index.html
@@ -18,11 +18,11 @@
     <!-- ABOUT SECTION -->
     <section class="section white">
 
-        <!-- IMAGE (THIS WILL SHOW) -->
+        <!-- ZIDANE IMAGE 2 -->
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Zinedine_Zidane_2018.jpg"
-          alt="Zinedine Zidane"
-          class="zidane-img">
+            src="images/zidane2.png"
+            alt="Zinedine Zidane"
+            class="zidane-img">
 
         <h2>About</h2>
         <p>
@@ -43,6 +43,14 @@
             he represents greatness without hatred, earning admiration through character
             as much as through achievement.
         </p>
+    </section>
+
+    <!-- ZIDANE IMAGE 1 (ABOVE QUOTE) -->
+    <section class="section white">
+        <img
+            src="images/zidane1.jpg"
+            alt="Zinedine Zidane"
+            class="zidane-img">
     </section>
 
     <!-- QUOTE SECTION -->
